--- a/testing.ipynb
+++ b/testing.ipynb
@@ -32,12 +32,12 @@
    "outputs": [],
    "source": [
     "merit_dirs = {\n",
-    "    'catchment': '/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/',\n",
-    "    'river': '/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/',\n",
-    "    'flow_dir': '/nas/cee-ice/data/MERIT-Hydro/processed/dir/',\n",
-    "    'accum': '/nas/cee-ice/data/MERIT-Hydro/processed/upg/',\n",
-    "    'megabasins': '/nas/cee-ice/data/MERIT-Hydro/basins_level2/merit_hydro_vect_level2.shp'\n",
-    "}\n"
+    "    \"catchment\": \"/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/\",\n",
+    "    \"river\": \"/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/\",\n",
+    "    \"flow_dir\": \"/nas/cee-ice/data/MERIT-Hydro/processed/dir/\",\n",
+    "    \"accum\": \"/nas/cee-ice/data/MERIT-Hydro/processed/upg/\",\n",
+    "    \"megabasins\": \"/nas/cee-ice/data/MERIT-Hydro/basins_level2/merit_hydro_vect_level2.shp\",\n",
+    "}"
    ]
   },
   {
@@ -83,9 +83,8 @@
    "source": [
     "merit_data = gd.load_merit_data(\n",
     "    catchments_file=\"/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/\",\n",
-    "    rivers_file=\"/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/\"\n",
-    ")\n",
-    "    "
+    "    rivers_file=\"/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/\",\n",
+    ")"
    ]
   }
  ],
