--- a/watershed_delineation_example.ipynb
+++ b/watershed_delineation_example.ipynb
@@ -54,16 +54,17 @@
    "source": [
     "# Define MERIT data directories\n",
     "merit_dirs = {\n",
-    "    'catchment': Path('/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/'),\n",
-    "    'river': Path('/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/'),\n",
-    "    'flow_dir': Path('/nas/cee-ice/data/MERIT-Hydro/processed/dir/'),\n",
-    "    'accum': Path('/nas/cee-ice/data/MERIT-Hydro/processed/upg/'),\n",
-    "    'megabasins': Path('/nas/cee-ice/data/MERIT-Hydro/basins_level2/merit_hydro_vect_level2.shp')\n",
+    "    \"catchment\": Path(\"/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/\"),\n",
+    "    \"river\": Path(\"/nas/cee-ice/data/MERIT-BASINS/pfaf_level_02/\"),\n",
+    "    \"flow_dir\": Path(\"/nas/cee-ice/data/MERIT-Hydro/processed/dir/\"),\n",
+    "    \"accum\": Path(\"/nas/cee-ice/data/MERIT-Hydro/processed/upg/\"),\n",
+    "    \"megabasins\": Path(\n",
+    "        \"/nas/cee-ice/data/MERIT-Hydro/basins_level2/merit_hydro_vect_level2.shp\"\n",
+    "    ),\n",
     "}\n",
     "\n",
     "# Load gauges\n",
-    "gauges_csv = Path('/nas/cee-water/cjgleason/ted/graph_delineator/inputs/test.csv')\n",
-    "\n"
+    "gauges_csv = Path(\"/nas/cee-water/cjgleason/ted/graph_delineator/inputs/test.csv\")"
    ]
   },
   {
@@ -302,7 +303,7 @@
     }
    ],
    "source": [
-    "megabasins_outlets = gd.get_megabasin_outlet_dict(all_gauges, merit_dirs['megabasins'])\n",
+    "megabasins_outlets = gd.get_megabasin_outlet_dict(all_gauges, merit_dirs[\"megabasins\"])\n",
     "megabasins_outlets"
    ]
   },
@@ -313,28 +314,26 @@
    "outputs": [],
    "source": [
     "def get_watershed_comids(\n",
-    "    gauges: gpd.GeoDataFrame,\n",
-    "    catchments: gpd.GeoDataFrame,\n",
-    "    rivers: gpd.GeoDataFrame\n",
+    "    gauges: gpd.GeoDataFrame, catchments: gpd.GeoDataFrame, rivers: gpd.GeoDataFrame\n",
     ") -> set:\n",
     "    \"\"\"\n",
     "    Find all COMIDs in the watershed network containing these gauges.\n",
-    "    \n",
+    "\n",
     "    Uses network traversal to find all upstream catchments from the outlet.\n",
     "    \"\"\"\n",
-    "    joined = gpd.sjoin(gauges, catchments.reset_index(), how='left', predicate='within')\n",
-    "    gauge_comids = set(joined['COMID'].dropna().unique())\n",
-    "    \n",
+    "    joined = gpd.sjoin(gauges, catchments.reset_index(), how=\"left\", predicate=\"within\")\n",
+    "    gauge_comids = set(joined[\"COMID\"].dropna().unique())\n",
+    "\n",
     "    if not gauge_comids:\n",
     "        return set()\n",
-    "    \n",
+    "\n",
     "    # Build network graph\n",
     "    G = nx.DiGraph()\n",
     "    for comid in rivers.index:\n",
-    "        nextdown = rivers.loc[comid, 'NextDownID']\n",
-    "        if nextdown != '0' and nextdown in rivers.index:\n",
+    "        nextdown = rivers.loc[comid, \"NextDownID\"]\n",
+    "        if nextdown != \"0\" and nextdown in rivers.index:\n",
     "            G.add_edge(comid, nextdown)\n",
-    "    \n",
+    "\n",
     "    # Find all upstream catchments\n",
     "    network_comids = set()\n",
     "    for start_comid in gauge_comids:\n",
@@ -342,16 +341,15 @@
     "            # Add all ancestors (upstream)\n",
     "            ancestors = {int(a) for a in nx.ancestors(G, start_comid)}\n",
     "            network_comids.update(ancestors)\n",
-    "            \n",
-    "            # Add all descendants (downstream) \n",
-    "            descendants =  {int(d) for d in nx.descendants(G, start_comid)}\n",
+    "\n",
+    "            # Add all descendants (downstream)\n",
+    "            descendants = {int(d) for d in nx.descendants(G, start_comid)}\n",
     "            network_comids.update(descendants)\n",
-    "            \n",
+    "\n",
     "            # Add the node itself\n",
     "            network_comids.add(int(start_comid))\n",
-    "    \n",
-    "    return network_comids\n",
-    "\n"
+    "\n",
+    "    return network_comids"
    ]
   },
   {
@@ -396,10 +394,10 @@
    ],
    "source": [
     "for megabasin_id, outlet_dict in megabasins_outlets.items():\n",
-    "    print(f\"\\n{'='*60}\")\n",
+    "    print(f\"\\n{'=' * 60}\")\n",
     "    print(f\"Processing Basin {megabasin_id}\")\n",
-    "    print(f\"{'='*60}\")\n",
-    "    \n",
+    "    print(f\"{'=' * 60}\")\n",
+    "\n",
     "    # Load basin data\n",
     "    mega_catchments, mega_rivers = gd.load_basin_data(megabasin_id, merit_dirs)\n",
     "\n",
@@ -407,18 +405,338 @@
     "    for outlet_id, outlet_gauge_ids in outlet_dict.items():\n",
     "        print(f\"\\nProcessing outlet {outlet_id} ({len(outlet_gauge_ids)} gauges)\")\n",
     "\n",
-    "        gauges = all_gauges[all_gauges['id'].isin(outlet_gauge_ids)]\n",
-    "        \n",
+    "        gauges = all_gauges[all_gauges[\"id\"].isin(outlet_gauge_ids)]\n",
+    "\n",
     "        comids = get_watershed_comids(gauges, mega_catchments, mega_rivers)\n",
-    "        \n",
+    "\n",
     "        catchments = mega_catchments.loc[mega_catchments.index.isin(comids)]\n",
     "        rivers = mega_rivers.loc[mega_rivers.index.isin(comids)]\n",
-    "        \n",
+    "\n",
     "        # Build graph with all geometries\n",
     "        G = gd.build_graph_with_geometries(catchments, rivers)\n",
     "\n",
     "        break\n",
     "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lengthkm</th>\n",
+       "      <th>lengthdir</th>\n",
+       "      <th>sinuosity</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>uparea</th>\n",
+       "      <th>order</th>\n",
+       "      <th>strmDrop_t</th>\n",
+       "      <th>slope_taud</th>\n",
+       "      <th>NextDownID</th>\n",
+       "      <th>maxup</th>\n",
+       "      <th>up1</th>\n",
+       "      <th>up2</th>\n",
+       "      <th>up3</th>\n",
+       "      <th>up4</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COMID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>73000548</th>\n",
+       "      <td>4.003596</td>\n",
+       "      <td>3.407992</td>\n",
+       "      <td>1.174767</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>389.436984</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>73000947</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73000555</td>\n",
+       "      <td>73000602</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-70.99833 45.06083, -70.9975 45.06...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73000555</th>\n",
+       "      <td>9.358833</td>\n",
+       "      <td>7.043559</td>\n",
+       "      <td>1.328708</td>\n",
+       "      <td>0.003855</td>\n",
+       "      <td>305.294288</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36.1</td>\n",
+       "      <td>0.003855</td>\n",
+       "      <td>73000548</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73000568</td>\n",
+       "      <td>73000673</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-70.985 45.09, -70.98417 45.09083,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73000568</th>\n",
+       "      <td>7.703432</td>\n",
+       "      <td>5.377993</td>\n",
+       "      <td>1.432399</td>\n",
+       "      <td>0.000649</td>\n",
+       "      <td>222.325940</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.000649</td>\n",
+       "      <td>73000555</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73000597</td>\n",
+       "      <td>73000700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-70.98333 45.15333, -70.98417 45.1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73000589</th>\n",
+       "      <td>0.453934</td>\n",
+       "      <td>0.320970</td>\n",
+       "      <td>1.414256</td>\n",
+       "      <td>0.002422</td>\n",
+       "      <td>73.316279</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.002422</td>\n",
+       "      <td>73000960</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73000617</td>\n",
+       "      <td>73000626</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-71.15 45.005, -71.14917 45.00583,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73000595</th>\n",
+       "      <td>2.975279</td>\n",
+       "      <td>2.530221</td>\n",
+       "      <td>1.175897</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>113.076821</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>73000948</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73000639</td>\n",
+       "      <td>73000663</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-70.76167 45.11, -70.76167 45.1091...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73001631</th>\n",
+       "      <td>11.135457</td>\n",
+       "      <td>9.180246</td>\n",
+       "      <td>1.212980</td>\n",
+       "      <td>0.000090</td>\n",
+       "      <td>24525.710780</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>73001630</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73001632</td>\n",
+       "      <td>73001653</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-69.8075 43.90667, -69.8075 43.907...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73001632</th>\n",
+       "      <td>1.332491</td>\n",
+       "      <td>1.102203</td>\n",
+       "      <td>1.208934</td>\n",
+       "      <td>0.000750</td>\n",
+       "      <td>9188.409984</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>73001631</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73001633</td>\n",
+       "      <td>73001732</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-69.83583 43.98667, -69.83667 43.9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73001633</th>\n",
+       "      <td>2.176937</td>\n",
+       "      <td>1.958321</td>\n",
+       "      <td>1.111635</td>\n",
+       "      <td>0.001378</td>\n",
+       "      <td>9124.518169</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>73001632</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73001634</td>\n",
+       "      <td>73001654</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-69.84833 43.9825, -69.84833 43.98...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73001634</th>\n",
+       "      <td>26.976287</td>\n",
+       "      <td>14.902552</td>\n",
+       "      <td>1.810179</td>\n",
+       "      <td>0.000756</td>\n",
+       "      <td>8925.588689</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20.4</td>\n",
+       "      <td>0.000756</td>\n",
+       "      <td>73001633</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73001635</td>\n",
+       "      <td>73001736</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-69.86667 43.97083, -69.86667 43.9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73001635</th>\n",
+       "      <td>4.317783</td>\n",
+       "      <td>3.679552</td>\n",
+       "      <td>1.173454</td>\n",
+       "      <td>0.001434</td>\n",
+       "      <td>8772.710475</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>0.001434</td>\n",
+       "      <td>73001634</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73001297</td>\n",
+       "      <td>73001395</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINESTRING (-70.05083 43.99083, -70.05167 43.9...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           lengthkm  lengthdir  sinuosity     slope        uparea  order  \\\n",
+       "COMID                                                                      \n",
+       "73000548   4.003596   3.407992   1.174767  0.000050    389.436984      3   \n",
+       "73000555   9.358833   7.043559   1.328708  0.003855    305.294288      2   \n",
+       "73000568   7.703432   5.377993   1.432399  0.000649    222.325940      2   \n",
+       "73000589   0.453934   0.320970   1.414256  0.002422     73.316279      2   \n",
+       "73000595   2.975279   2.530221   1.175897  0.000034    113.076821      2   \n",
+       "...             ...        ...        ...       ...           ...    ...   \n",
+       "73001631  11.135457   9.180246   1.212980  0.000090  24525.710780      5   \n",
+       "73001632   1.332491   1.102203   1.208934  0.000750   9188.409984      4   \n",
+       "73001633   2.176937   1.958321   1.111635  0.001378   9124.518169      4   \n",
+       "73001634  26.976287  14.902552   1.810179  0.000756   8925.588689      4   \n",
+       "73001635   4.317783   3.679552   1.173454  0.001434   8772.710475      4   \n",
+       "\n",
+       "          strmDrop_t  slope_taud  NextDownID  maxup       up1       up2  up3  \\\n",
+       "COMID                                                                          \n",
+       "73000548         0.2    0.000050    73000947      2  73000555  73000602    0   \n",
+       "73000555        36.1    0.003855    73000548      2  73000568  73000673    0   \n",
+       "73000568         5.0    0.000649    73000555      2  73000597  73000700    0   \n",
+       "73000589         1.1    0.002422    73000960      2  73000617  73000626    0   \n",
+       "73000595         0.1    0.000034    73000948      2  73000639  73000663    0   \n",
+       "...              ...         ...         ...    ...       ...       ...  ...   \n",
+       "73001631         0.0    0.000000    73001630      2  73001632  73001653    0   \n",
+       "73001632         0.0    0.000000    73001631      2  73001633  73001732    0   \n",
+       "73001633         0.0    0.000000    73001632      2  73001634  73001654    0   \n",
+       "73001634        20.4    0.000756    73001633      2  73001635  73001736    0   \n",
+       "73001635         6.2    0.001434    73001634      2  73001297  73001395    0   \n",
+       "\n",
+       "          up4                                           geometry  \n",
+       "COMID                                                             \n",
+       "73000548    0  LINESTRING (-70.99833 45.06083, -70.9975 45.06...  \n",
+       "73000555    0  LINESTRING (-70.985 45.09, -70.98417 45.09083,...  \n",
+       "73000568    0  LINESTRING (-70.98333 45.15333, -70.98417 45.1...  \n",
+       "73000589    0  LINESTRING (-71.15 45.005, -71.14917 45.00583,...  \n",
+       "73000595    0  LINESTRING (-70.76167 45.11, -70.76167 45.1091...  \n",
+       "...       ...                                                ...  \n",
+       "73001631    0  LINESTRING (-69.8075 43.90667, -69.8075 43.907...  \n",
+       "73001632    0  LINESTRING (-69.83583 43.98667, -69.83667 43.9...  \n",
+       "73001633    0  LINESTRING (-69.84833 43.9825, -69.84833 43.98...  \n",
+       "73001634    0  LINESTRING (-69.86667 43.97083, -69.86667 43.9...  \n",
+       "73001635    0  LINESTRING (-70.05083 43.99083, -70.05167 43.9...  \n",
+       "\n",
+       "[201 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rivers"
    ]
   },
   {
@@ -446,12 +764,7 @@
     }
    ],
    "source": [
-    "gauge_info = gd.insert_all_gauges(\n",
-    "    G,\n",
-    "    gauges,\n",
-    "    merit_dirs['flow_dir'],\n",
-    "    megabasin_id\n",
-    ")"
+    "gauge_info = gd.insert_all_gauges(G, gauges, merit_dirs[\"flow_dir\"], megabasin_id)"
    ]
   },
   {
@@ -487,11 +800,7 @@
     }
    ],
    "source": [
-    "merge_history = gd.consolidate_graph(\n",
-    "    G,\n",
-    "    max_area=10000000000,\n",
-    "    preserve_gauges=True\n",
-    ")\n",
+    "merge_history = gd.consolidate_graph(G, max_area=10000000000, preserve_gauges=True)\n",
     "print(f\"  Consolidation: {len(merge_history)} merges\")"
    ]
   },
@@ -526,7 +835,7 @@
    ],
    "source": [
     "# G.nodes['USGS-01053500']['polygon'].buffer(0.001).buffer(-0.001)\n",
-    "G.nodes['USGS-01053500']"
+    "G.nodes[\"USGS-01053500\"]"
    ]
   },
   {
@@ -559,10 +868,10 @@
     "index = [i for i in G.nodes]\n",
     "data = [d for _, d in G.nodes.data()]\n",
     "\n",
-    "gdf = gpd.GeoDataFrame(data).set_geometry('polygon')\n",
+    "gdf = gpd.GeoDataFrame(data).set_geometry(\"polygon\")\n",
     "\n",
-    "ax = gdf.plot('uparea_km2')\n",
-    "gauges.plot(ax=ax, color='red')"
+    "ax = gdf.plot(\"uparea_km2\")\n",
+    "gauges.plot(ax=ax, color=\"red\")"
    ]
   },
   {
@@ -1454,7 +1763,7 @@
     }
    ],
    "source": [
-    "gdf[gdf['is_gauge']].plot('area_km2')"
+    "gdf[gdf[\"is_gauge\"]].plot(\"area_km2\")"
    ]
   }
  ],
